
Table "customers" {
  "id" INTEGER [pk, increment]
  "primary_address_id" INTEGER
  "preferred_payment_id" INTEGER
  "email_address" VARCHAR(320) [unique, not null]
  "password_hash" CHAR(60) [not null]
  "created_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]
}

Table "addresses" {
  "id" INTEGER [pk, increment]
  "country" VARCHAR(56) [not null]
  "administrative_division" VARCHAR(24)
  "city" VARCHAR(127) [not null]
  "line1" VARCHAR(127) [not null]
  "line2" VARCHAR(127)
  "postal_code" VARCHAR(10) [not null]
}

Table "customer_addresses" {
  "customer_id" INTEGER [not null]
  "address_id" INTEGER [not null]

  Indexes {
    (customer_id, address_id) [pk]
  }
}

Table "payment_methods" {
  "id" INTEGER [pk, increment]
  "card_number" VARCHAR(20) [not null]
  "card_expiration" DATE [not null]
  "card_code" SMALLINT [not null]
  "billing_address_id" INTEGER [not null]
  "customer_id" INTEGER [not null]
}

Table "products" {
  "id" INTEGER [pk, increment]
  "product_name" VARCHAR(50) [not null]
  "stock" INTEGER [not null]
  "seller_id" INTEGER [not null]
  "price" NUMERIC(10,2) [not null]
  "created_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]
  "removed_at" TIMESTAMPTZ
}

Table "ratings" {
  "customer_id" INTEGER [not null]
  "product_id" INTEGER [not null]
  "rating" SMALLINT [not null, check: `rating > 0 AND rating <= 10`]
  "created_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (customer_id, product_id) [pk]
  }
}

Table "sellers" {
  "id" INTEGER [pk, increment]
  "seller_name" VARCHAR(63) [unique, not null]
  "password_hash" CHAR(60) [not null]
  "created_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]
  "removed_at" TIMESTAMPTZ
}

Table "moderators" {
  "id" INTEGER [pk, increment]
  "created_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]
  "first_name" VARCHAR(20) [not null]
  "last_name" VARCHAR(30) [unique, not null]
  "email_address" VARCHAR(255) [unique, not null]
  "password_hash" CHAR(60) [not null]
}

Table "reports" {
  "id" INTEGER [pk, increment]
  "customer_id" INTEGER [not null]
  "reviewed_by" INTEGER
  "reason" VARCHAR(60) [not null]
  "product_id" INTEGER [not null]
  "created_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]
}

Table "product_removals" {
  "removed_by" INTEGER [not null]
  "product_id" INTEGER [not null]
  "seller_id" INTEGER [not null]
  "removed_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (product_id, removed_at) [pk]
  }
}

Table "seller_removals" {
  "removed_by" INTEGER [not null]
  "seller_id" INTEGER [not null]
  "removed_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (seller_id, removed_at) [pk]
  }
}

Table "purchases" {
  "id" INTEGER [pk, increment]
  "created_at" TIMESTAMPTZ [not null, default: `CURRENT_TIMESTAMP`]
  "customer_id" INTEGER [not null]
  "payment_method_id" INTEGER [not null]
}

Table "product_sales" {
  "id" INTEGER [pk, increment]
  "purchase_id" INTEGER [not null]
  "product_id" INTEGER [not null]
  "price_per_item" NUMERIC(10,2) [not null]
  "quantity" INTEGER [not null, default: 1]
}

Table "deliveries" {
  "id" INTEGER [pk, increment]
  "purchase_id" INTEGER [not null]
  "address_id" INTEGER [not null]
  "delivery_status" varchar(63) [default: 'processing']
  "shipped_on" DATE
  "estimated_delivery_time" TIMESTAMPTZ
}

// One to Many: 
// - Every address can be the primary address of many customers
// - every customer can have at most one primary address
Ref "fk_primary_address":"addresses"."id" < "customers"."primary_address_id"

// One to One:
// - Every payment method can be the preferred payment method of one customer
// - Every customer can have at most one preferred payment method
Ref "fk_preferred_payment_id":"payment_methods"."id" - "customers"."preferred_payment_id"

// Many to One
// - One customer can have many entries in this table
// - Each entry in this table has only one customer
Ref "fk_customer":"customers"."id" > "customer_addresses"."customer_id"

// Many to One
// - One address can have many entries in this table
// - Every entry in this table has only one address
Ref "fk_address":"addresses"."id" > "customer_addresses"."address_id"

// One to Many
// - One address can be associated with many payment methods
// - Each payment method has only one billing address
Ref "fk_address":"addresses"."id" > "payment_methods"."billing_address_id"

// One to Many
// - One customer can have many payment methods
// - Every payment method is associated with one customer
Ref "fk_customer":"customers"."id" < "payment_methods"."customer_id"

// One to Many
// - One seller can sell many products
// - Every product can only be sold by one seller
Ref "fk_seller":"sellers"."id" < "products"."seller_id"

// One to Many
// - One customer can give many ratings
// - Every rating can only be given by one customer
Ref "fk_customer":"customers"."id" < "ratings"."customer_id"

// One to Many
// - One product can receive many ratings
// - Every rating rates one product
Ref "fk_product":"products"."id" < "ratings"."product_id"

// One to Many
// - Each customer can many many reports
// - Each report can only be made by one customer
Ref "fk_customer":"customers"."id" < "reports"."customer_id"

// One to Many
// - Each moderator can review many reports
// - Each report can only be reviewed by one moderator
Ref "fk_moderator":"moderators"."id" < "reports"."reviewed_by"

// One to Many
// - Each moderator can remove many products
// - Each product removal involves one moderator 
Ref "fk_moderator":"moderators"."id" < "product_removals"."removed_by"

// One to Many
// - Each product can be removed by many product removals
//     - For example, a product could be reinstated on the platform after being removed erroneously,
//       then removed again at a later date.
// - Each product removal involves one product 
Ref "fk_product":"products"."id" < "product_removals"."product_id"

// One to Many
// - Each moderator can remove many sellers
// - Each seller removal involves one moderator 
Ref "fk_moderator":"moderators"."id" < "seller_removals"."removed_by"

// One to Many
// - Each merchant can be removed by many seller removals
//     - For example, a merchant could be reinstated on on the platform after being removed erroneously,
//       then removed again at a later date.
// - Each seller removal involves one merchant
Ref "fk_seller":"sellers"."id" < "seller_removals"."seller_id"

// One to Many
// - Each customer can make many purchases
// - Every purchase is made by one customer
Ref "fk_customer":"customers"."id" < "purchases"."customer_id"

// One to Many
// - Each payment method can be used in many purchases
// - Each purchase uses only one payment method
Ref "fk_payment_method":"payment_methods"."id" < "purchases"."payment_method_id"

// One to Many
// - Each purchase can involve many product sales
// - Each product sale can be a part of only one purchase
Ref "fk_purchase":"purchases"."id" < "product_sales"."purchase_id"

// One to Many
// - Each product can be involved in many product sales
// - Each product sale can only involve one product.
Ref "fk_product":"products"."id" < "product_sales"."product_id"

// One to Many
// - Each purchase can involve many deliveries
// - Each delivery can only be made for one purchase
Ref "fk_purchase":"purchases"."id" < "deliveries"."purchase_id"

// One to Many
// - Each address can be used in many deliveries
// - Each delivery is shipped to one address
Ref "fk_address":"addresses"."id" < "deliveries"."address_id"
